Bug 265670 - [WPE] WPE Platform: fix a typo in headless and DRM headers
Summary: [WPE] WPE Platform: fix a typo in headless and DRM headers
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WPE WebKit (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Carlos Garcia Campos
URL:
Keywords:
Depends on:
Blocks: WPEPlatformAPI
  Show dependency treegraph
 
Reported: 2023-12-01 08:41 PST by Carlos Garcia Campos
Modified: 2023-12-01 10:02 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2023-12-01 08:41:40 PST
I copy pasted from wayland headers...
Comment 1 Carlos Garcia Campos 2023-12-01 08:43:43 PST
Pull request: https://github.com/WebKit/WebKit/pull/21162
Comment 2 EWS 2023-12-01 10:02:48 PST
Committed 271389@main (6ce37246c1d1): <https://commits.webkit.org/271389@main>

Reviewed commits have been landed. Closing PR #21162 and removing active labels.