[WPE] WPE Platform: fix a typo in headless and DRM headers https://bugs.webkit.org/show_bug.cgi?id=265670

Reviewed by Michael Catanzaro.

Fix copy paste error.

* Source/WebKit/WPEPlatform/wpe/drm/WPEDisplayDRM.h:
* Source/WebKit/WPEPlatform/wpe/drm/WPEViewDRM.h:
* Source/WebKit/WPEPlatform/wpe/headless/WPEDisplayHeadless.h:
* Source/WebKit/WPEPlatform/wpe/headless/WPEViewHeadless.h:

Canonical link: https://commits.webkit.org/271389@main